--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": "src",
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "build",
+    "outDir": "./build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
