--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "hello": "./build/index.js"
+  },
   "scripts": {
-    "start:dev": "nodemon"
+    "build": "npx tsc",
+    "package": "pkg . --targets node14-linux-x64 --output hello"
+  },
+  "pkg": {
+    "scripts": "build/**/*.js"
   },
   "author": "Luca Mienert",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "@types/yargs": "^17.0.11",
     "nodemon": "^2.0.19",
+    "pkg": "^5.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "yargs": "^17.5.1"
